# mahotas

./: .coveragerc  .ditz-config  .gitignore  .readthedocs.yaml  .travis.yml  AUTHORS  CITATION  CITATION.cff  COPYING  ChangeLog  INSTALL  LICENSE.BOOST  MANIFEST.in  Makefile  Python opencv  README  README.md  README.rst  meson.build  meson_options.txt  pyproject.toml  readthedocs-requirements.txt  setup.py  template.py  tests-requirements.txt  tests-requirments.txt
.github/workflows/: python-package-conda.yml  python-package-linux.yml  python-package-macos.yml  python-package-win32.yml  python-package-win64.yml  test-python-package-with-conda.yml  wheel.yml
.travis/: travis_before_install.sh  travis_install.sh
bugs/: issue-0c37ae67b474b677f721b4cb90c2f71d26fef6fe.yaml  issue-903d785305c32618d4000c61f7e7facabfa4ce4c.yaml  issue-da58b6f54cc5a693a1c325b1de215caabbb40cb3.yaml  project.yaml
build-aux/: meson-helper.py
docs/: .gitignore
docs/source/: api.rst  classification.rst  color.rst  conf.py  contributing.rst  distance.rst  edf.rst  faq.rst  features.rst  history.rst  index.rst  install.rst  internals.rst  io.rst  labeled.rst  lbp.rst  mahotas-features.rst  morphology.rst  papers.rst  polygon.rst  principles.rst  readme.rst  surf.rst  surfref.rst  tasks.rst  thresholding.rst  wally.rst  wavelets.rst
docs/source/_templates/: sidebar.html
docs/source/figures/: distance.py
mahotas/: Makefile  __init__.py  _bbox.cpp  _center_of_mass.cpp  _convex.cpp  _convolve.cpp  _distance.cpp  _filters.cpp  _filters.h  _filters.py  _histogram.cpp  _interpolate.cpp  _labeled.cpp  _lbp.cpp  _morph.cpp  _segmentation.cpp  _surf.cpp  _texture.cpp  _thin.cpp  _zernike.cpp  array.hpp  bbox.py  bwperim.py  center_of_mass.py  colors.py  convolve.py  debug.h  dispatch.hpp  distance.py  edge.py  euler.py  features.py  features_cli.py  freeimage.py  histogram.py  internal.py  interpolate.py  labeled.py  lbp.py  mahotas_version.py  (+13 more)
mahotas/demos/: __init__.py  distance.py  edge_demo.py  morphology.py  nuclear.py  nuclear_distance_watershed.py  superpixels.py  surf_gaussians.py  surf_luispedro.py  thresholding.py  wally.py  wavelet_compress.py
mahotas/features/: __init__.py  _lbp.cpp  _surf.cpp  _texture.cpp  _zernike.cpp  lbp.py  moments.py  shape.py  surf.py  tas.py  texture.py  zernike.py
mahotas/io/: __init__.py  freeimage.py  matplotlibwrap.py  pil.py
mahotas/numpypp/: array.hpp  dispatch.hpp  numpy.hpp
mahotas/tests/: LineDetectorByHough.py  __init__.py  find_hough_line.py  pymorph_copy.py  test_bbox.py  test_bwperim.py  test_center_of_mass.py  test_citation.py  test_close_holes.py  test_colors.py  test_convolve.py  test_demos.py  test_dilate_erode.py  test_distance.py  test_edge.py  test_euler.py  test_features_shape.py  test_filters.py  test_find.py  test_freeimage.py  test_get_output.py  test_gvoronoi.py  test_histogram.py  test_hitmiss.py  test_hough_transform_line.py  test_imresize.py  test_internal.py  test_interpolate.py  test_io.py  test_label.py  test_labeled.py  test_lbp.py  test_majority.py  test_mean_filter.py  test_median_filter.py  test_moments.py  test_morph.py  test_polygon.py  test_segmentation.py  test_stretch.py  (+10 more)
mahotas/tests/data/: luispedro.npy
morph/: __init__.py  _morph.cpp  array.hpp  dispatch.hpp  morph.py
numpypp/: array.hpp  dilate.cpp  dispatch.hpp
pit/: __init__.py  pit.py  segmentation.py
pymorph_.egg-info/: .gitignore  SOURCES.txt
tests/: test_bbox.py  test_bwperim.py  test_center_of_mass.py  test_close_holes.py  test_convolve.py  test_dilate_erode.py  test_distance.py  test_edge.py  test_euler.py  test_freeimage.py  test_histogram.py  test_hitmiss.py  test_imresize.py  test_labeled.py  test_lbp.py  test_mahotas.py  test_majority.py  test_moments.py  test_pit.py  test_polygon.py  test_stretch.py  test_surf.py  test_surf_regression.py  test_tas.py  test_texture.py  test_thin.py  test_thresholding.py  test_vision.py  test_watershed.py  test_zernike.py
vision/: __init__.py  _histogram.cpp  histogram.py
